--- a/source/style.css
+++ b/source/style.css
@@ -32,9 +32,56 @@ button {
     border-radius: 10px;
     outline: none;
     cursor: pointer;
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+    inset -2px -2px 3px rgba(0, 0, 0, .6);
+    margin-bottom: 5px;
+}
+
+button:active{
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                inset 2px 2px 3px rgba(0, 0, 0, .6);
+}
+
+.counterup{
+    background-color: #047cc2;
+}
+
+.startstop{
+    background-color: #6db4de;
+    height: 150px;
+    width: 150px;
+    border-radius: 75px;
 }
 
 .buttonstop{
     color: red;
+    background-color: #c1c1c1;
     font-size: 24pt;
+    cursor: default;
+    box-shadow: none ;
+}
+
+button.whitebutton, button.bluebutton {
+    width: 55px;
+    height: 38px;
+    font-weight: 500;
+    border-radius: 3px;
+    box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.09);
+    display: inline-block;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    margin-right: 5px;
+}
+
+button.whitebutton{
+    background-color: #ffffff;
+    border-color: #367fa9;
+    color: #000000;
+}
+
+button.bluebutton{
+    background-color: #047cc2;
+    border-color: #367fa9;
+    color: #ffffff;
 }
