--- a/source/style.css
+++ b/source/style.css
@@ -50,10 +50,6 @@ button:active{
     background-color: #be5959;
 }
 
-.endearly{
-    background-color: #868686;
-}
-
 .startstop{
     background-color: #6db4de;
     height: 120px;
@@ -97,5 +93,32 @@ button.bluebutton{
 button.small{
     width: 70px;
     height: 40px;
-    font-size: 10px;
+    font-size: 14px;
+}
+
+button.endearly{
+    background-color: #868686;
+    font-size: 28px;
+}
+
+table{
+    margin-left: auto;
+    margin-right: auto;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ffffff;
+    font-size: 20pt;
+    height: 52px;
+    margin-bottom: 5px;
+}
+
+.timer{
+    background-color: #990000;
+}
+
+.counter{
+    background-color: #000099;
+}
+
+.timer td{
+    vertical-align: middle;
 }
