--- a/source/style.css
+++ b/source/style.css
@@ -1,124 +1,117 @@
-div{
-    margin-bottom: 15px;
+.label {
+    /* add style rules here to change how the label appears */
+    margin: .75rem 0;
 }
 
-.hint{
-    margin-top: 5px;
-    font-size: 12px;
-    display: block;
-    margin-bottom: 5px;
-    color: #737373;
+.hint {
+    /* add style rules here to change how the hint appears */
+    margin: .5rem 0;
+    color: rgba(0,0,0,.65);
     font-style: italic;
-    font-weight: 300;
 }
 
-.buttons, #timer, #countdiv{
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-
-button {
-    background-color: #ffffff;
-    border: 1px solid #000000;
-    color: #000000;
-    text-align: center;
-    height: 60px;
-    width: 150px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 24px;
-    border-radius: 10px;
+button{
     outline: none;
-    cursor: pointer;
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
-    inset -2px -2px 3px rgba(0, 0, 0, .6);
-    margin-bottom: 5px;
 }
 
-button:active{
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
-                inset 2px 2px 3px rgba(0, 0, 0, .6);
+/* button styles */
+.btn {
+    padding: 16px;
+    border-radius: 4px;
+    margin: 4px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+}
+.btn * {
+    margin: 4px;
+}
+.btn-small .icon {
+    height: 16px;
+    width: 16px;
+}
+.btn:hover,
+.btn:focus {
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+.btn-primary {
+    background-color: #047CC2;
+    border: 1px solid #093F5B;
+    color: white;
+}
+.btn-primary * {
+    fill: white;
+}
+.btn-primary:hover,
+.btn-primary:focus {
+    background-color: #0f97e6;
+}
+.btn-secondary {
+    background-color: white;
+    border: 1px solid rgba(0,0,0,.75);
+    color: rgba(0,0,0,.75);
+}
+.btn-secondary * {
+    fill: rgba(0,0,0,.75);
+}
+.btn-secondary:hover,
+.btn-secondary:focus {
+    background-color: rgba(0,0,0,.1);
+}
+.btn-danger {
+    background-color: red;
+    color: white;
+}
+.btn-danger:hover,
+.btn-danger:focus {
+    background-color: rgba(255,0,0,.7);
+}
+.end-early{
+    fill:#920C0C;
+}
+.end-early:hover{
+    fill:red;
+}
+/* icon styles */
+.icon {
+    width: 36px;
+    height: 36px;
+    fill: rgba(0,0,0,.5);
 }
 
-.counterup{
-    background-color: #44d144;
+/* the rest of these styles are for the general layout of the field */
+.container,
+.col,
+.section-icon-container,
+.current-value-container,
+.primary-action-container,
+.secondary-action-container {
+    display: flex;
+}
+.col {
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+}
+.section-icon-container {
+    justify-content: center;
+}
+.current-value-container {
+    height: 160px;
+    width: 160px;
+    margin: 16px 0;
+    background-color: white;
+    border: 2px solid #979797;
+    border-radius: 80px;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.5rem;
+}
+.current-value {
+    text-align: center;
+}
+.center {
+    text-align: center;
+    justify-content: center;
 }
 
-.counterdown{
-    background-color: #be5959;
-}
-
-.startstop{
-    background-color: #6db4de;
-    height: 120px;
-    width: 120px;
-    border-radius: 60px;
-}
-
-.buttonstop{
-    color: red;
-    background-color: #c1c1c1;
-    font-size: 24pt;
-    cursor: default;
-    box-shadow: none ;
-}
-
-button.whitebutton, button.bluebutton {
-    width: 55px;
-    height: 38px;
-    font-weight: 500;
-    border-radius: 3px;
-    box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.09);
-    display: inline-block;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    margin-right: 5px;
-}
-
-button.whitebutton{
-    background-color: #ffffff;
-    border-color: #367fa9;
-    color: #000000;
-}
-
-button.bluebutton{
-    background-color: #047cc2;
-    border-color: #367fa9;
-    color: #ffffff;
-}
-
-button.small{
-    width: 70px;
-    height: 40px;
-    font-size: 14px;
-}
-
-button.endearly{
-    background-color: #868686;
-    font-size: 28px;
-}
-
-table{
-    margin-left: auto;
-    margin-right: auto;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #ffffff;
-    font-size: 20pt;
-    height: 52px;
-    margin-bottom: 5px;
-}
-
-.timer{
-    background-color: #990000;
-}
-
-.counter{
-    background-color: #000099;
-}
-
-.timer td{
-    vertical-align: middle;
-}
